# Chat-server

./: .gitignore  Building a Chat Server.sln  Building a Chat Server.vcxproj  Building a Chat Server.vcxproj.filters  CMakeLists.txt  Chat server check list.txt  Main.cpp  Messages.db  Notes.txt  Registration.cpp  RegistrationHeader.h  User Information.db  Username.cpp  Username.h  jwt.h  main.cpp  pythonreq.py  server.cpp  sqliteDatabase.h
Debug/: Building a Chat Server.exe.recipe  Building a Chat Server.ilk  Building a Chat Server.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/Building.9da1ea80.tlog/: Building a Chat Server.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
